--- a/Códigos/1_trabalhoPNS.ipynb
+++ b/Códigos/1_trabalhoPNS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b75cf1b1",
    "metadata": {},
    "outputs": [],
@@ -20,23 +20,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "d10905da",
    "metadata": {},
    "outputs": [],
    "source": [
     "colunas_base_outliers = ['V0001', 'V0024', 'UPA_PNS', 'V0006_PNS', 'C00301', \n",
-    "                        'V0015', 'V0026', 'V0031', 'B001', 'C006', 'C008', 'C009', 'C011', 'C012','D00901', 'D014', 'D015', 'E006011', 'E008', 'E01602', 'E017', 'E01802', 'E019', 'E027', \n",
+    "                        'V0015', 'V0026', 'V0031', 'B001', 'C006', 'C008', 'C009', 'C011', 'C012','D00901', 'D014', 'D015', 'E01602', 'E017', 'E01802', 'E019', 'E027', \n",
     "                        'F001011', 'F001021', 'F007011', 'F007021', 'F008011', 'F008021', 'VDF001', 'VDF00102', 'F016', 'G059', 'G060', 'G062', 'G032', \n",
-    "                        'I00102', 'I006', 'I004', 'I00401', 'I00402', 'I00403','I012', 'J001', 'J00101', 'J002', 'J00402', 'J00404', 'J007', 'J00801', 'J01101', 'J060', 'M001', 'M00203', 'M00302', 'M011011', 'M011021', 'M011051', 'M011071', \n",
+    "                        'I00102', 'I006', 'I004', 'I00401', 'I00402', 'I00403','I012', 'J001', 'J00101', 'J01101', 'J060', 'M001', 'M00203', 'M00302', 'M011011', 'M011021', 'M011051', 'M011071', \n",
     "                        'N004', 'N005', 'N008', 'N010', 'N011', 'N012', 'N016', 'P00104', 'P00404', 'P00901', 'P01101', 'P02001', 'P018', 'P02002', 'P02501', 'P02602', 'P02601', 'P027', 'P02801', 'P029', 'P035', 'P03701', 'P03702',\n",
     "                        'P04501', 'P04502', 'P050', 'P051', 'P052', 'P053', 'P05401', 'P05404', 'P05407', 'P05410', 'P05413', 'P05416', 'P05419', 'P06701', 'P068', 'Q00201', 'Q03001', 'Q060', 'Q06306', \n",
     "                        'Q068', 'Q11006', 'Q128', 'R034', 'T001', 'H003', 'H004', 'H010']\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a64f9e8c",
+   "metadata": {},
+   "source": [
+    "Alguns atributos eliminados depois: 'E006011', 'E008', 'E005', 'J002', 'J00402', 'J00404', 'J007', 'J00801'"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "id": "5cfcc85c",
    "metadata": {},
    "outputs": [
@@ -131,16 +139,6 @@
         },
         {
          "name": "D015",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "E006011",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "E008",
          "rawType": "float64",
          "type": "float"
         },
@@ -276,31 +274,6 @@
         },
         {
          "name": "J00101",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "J002",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "J00402",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "J00404",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "J007",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "J00801",
          "rawType": "float64",
          "type": "float"
         },
@@ -601,7 +574,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "61f1e16a-e3b4-4004-9de9-5ac7fcd4a324",
+       "ref": "aa686535-6c62-4208-a5c1-bb452065fde6",
        "rows": [
         [
          "0",
@@ -622,8 +595,6 @@
          "5.0",
          "1.0",
          "1.0",
-         null,
-         null,
          "100.0",
          "40.0",
          null,
@@ -651,11 +622,6 @@
          "1.0",
          "3.0",
          "3.0",
-         "2.0",
-         null,
-         null,
-         "1.0",
-         "1.0",
          "1.0",
          "1.0",
          "1.0",
@@ -739,8 +705,6 @@
          null,
          null,
          null,
-         null,
-         null,
          "2.0",
          "1.0",
          "998.0",
@@ -764,11 +728,6 @@
          "2.0",
          "3.0",
          "3.0",
-         "2.0",
-         null,
-         null,
-         "1.0",
-         "1.0",
          "1.0",
          "2.0",
          null,
@@ -848,8 +807,6 @@
          "10.0",
          "1.0",
          "2.0",
-         null,
-         null,
          "1000.0",
          "36.0",
          null,
@@ -877,11 +834,6 @@
          "2.0",
          "3.0",
          "4.0",
-         "2.0",
-         null,
-         null,
-         "2.0",
-         null,
          "1.0",
          "2.0",
          null,
@@ -966,8 +918,6 @@
          null,
          null,
          null,
-         null,
-         null,
          "2.0",
          null,
          "2.0",
@@ -990,11 +940,6 @@
          "2.0",
          "2.0",
          "2.0",
-         "2.0",
-         null,
-         null,
-         "2.0",
-         null,
          "1.0",
          "2.0",
          null,
@@ -1079,8 +1024,6 @@
          null,
          null,
          null,
-         null,
-         null,
          "2.0",
          null,
          "2.0",
@@ -1103,11 +1046,6 @@
          "2.0",
          "2.0",
          "2.0",
-         "2.0",
-         null,
-         null,
-         "2.0",
-         null,
          "1.0",
          "2.0",
          null,
@@ -1170,7 +1108,7 @@
         ]
        ],
        "shape": {
-        "columns": 110,
+        "columns": 103,
         "rows": 5
        }
       },
@@ -1339,7 +1277,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 110 columns</p>\n",
+       "<p>5 rows × 103 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1357,10 +1295,10 @@
        "3   1.0  ...   NaN     NaN   NaN     NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
        "4   2.0  ...   NaN     NaN   NaN     NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
        "\n",
-       "[5 rows x 110 columns]"
+       "[5 rows x 103 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1372,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "id": "c60cb62d",
    "metadata": {},
    "outputs": [],
@@ -1402,7 +1340,6 @@
     "\n",
     "#Colunas acrescentadas para análise e produto cartesiano: \n",
     "# 'D00201', 'D00301', 'D008'\n",
-    "# 'E001', 'E002', 'E003', 'E004', 'E005'\n",
     "# 'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01801'\n",
     "## tirei 'E010010', 'E01604', 'E01804'\n",
     "# 'I00103', 'I001031','C00301'\n",
@@ -1420,6 +1357,7 @@
     "# 'H001', 'H002'\n",
     "# Atributos sobre contraceptivo: 'R010', 'R025', 'R028', 'R029', 'R030', 'R031', 'R032', 'R033', 'R034', 'R03601', 'R03607', 'R03608', 'R03610', 'S065', \n",
     "\n",
+    "\n",
     "colunas_existentes = [col for col in colunas_base_outliers if col in df_filtrado.columns]\n",
     "\n",
     "df_filtrado = df_filtrado[colunas_existentes]"
@@ -1427,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "id": "ea8120b5",
    "metadata": {},
    "outputs": [],
@@ -1437,12 +1375,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "id": "faf47262",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_filtrado.to_csv('..\\\\Bases\\\\Criados\\\\1_base_bruta.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "d3d38aee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['D00901', 'D014', 'E01602', 'E017', 'E01802', 'E019', 'F001021',\n",
+       "       'F007021', 'F008021', 'VDF00102', 'G060', 'G062', 'I006', 'I004',\n",
+       "       'I00401', 'I00402', 'I00403', 'M00203', 'M011011', 'M011021', 'M011051',\n",
+       "       'M011071', 'N004', 'N005', 'N008', 'P00104', 'P00404', 'P02801', 'P029',\n",
+       "       'P035', 'P03701', 'P03702', 'P051', 'P052', 'P053', 'P05401', 'P05404',\n",
+       "       'P05407', 'P05410', 'P05413', 'P05416', 'P05419', 'Q00201', 'Q03001',\n",
+       "       'Q060', 'R034', 'H003', 'H004', 'H010'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_filtrado.columns[df_filtrado.isnull().any()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "d977b665",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(49)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df_filtrado.isnull().sum() > 0).sum()"
    ]
   },
   {
@@ -1469,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5d235358",
    "metadata": {},
    "outputs": [],
@@ -1480,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f59adb64",
    "metadata": {},
    "outputs": [],
@@ -1501,17 +1488,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9b940021",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"\\nColunas adicionadas: \\n\\n'D00201', 'D00301', 'D008',\\n'E001', 'E002', 'E003', 'E004', 'E005',\\n'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01801',\\n'I00103', 'I001031'\\n'N00101',\\n'P00103', 'P00403', \\n'P034',\\n'P05901', 'P05902', 'P05903', 'P05904',\\n'Q00101', 'Q02901', 'Q05901'\\n'H001', 'H002',\\n\""
+       "\"\\nColunas adicionadas: \\n\\n'D00201', 'D00301', 'D008',\\n'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01801',\\n'I00103', 'I001031'\\n'N00101',\\n'P00103', 'P00403', \\n'P034',\\n'P05901', 'P05902', 'P05903', 'P05904',\\n'Q00101', 'Q02901', 'Q05901'\\n'H001', 'H002',\\n\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,7 +1506,7 @@
    "source": [
     "# Merge para adicionar colunas da pns2019 na base_sem_outliers\n",
     "base_sem_outliers = base_sem_outliers.merge(\n",
-    "    pns2019[['chave_pessoa', 'D00201', 'D00301', 'D008', 'E001', 'E002', 'E003', 'E004', 'E005', 'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01801',\n",
+    "    pns2019[['chave_pessoa', 'D00201', 'D00301', 'D008', 'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01801',\n",
     "             'I00103', 'I001031', 'N00101', 'P00103', 'P00403', 'P034', 'P05901', 'P05902', 'P05903', 'P05904', 'Q00101', 'Q02901', \n",
     "             'Q05901', 'H001', 'H002',]],\n",
     "    on='chave_pessoa',\n",
@@ -1530,7 +1517,6 @@
     "Colunas adicionadas: \n",
     "\n",
     "'D00201', 'D00301', 'D008',\n",
-    "'E001', 'E002', 'E003', 'E004', 'E005',\n",
     "'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01801',\n",
     "'I00103', 'I001031'\n",
     "'N00101',\n",
@@ -1544,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3865d545",
    "metadata": {},
    "outputs": [],
@@ -1554,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "bb7fde0b",
    "metadata": {},
    "outputs": [],
@@ -1567,7 +1553,7 @@
    "id": "390bd2e6",
    "metadata": {},
    "source": [
-    "### Informações gerais das bases"
+    "### Informações gerais das bases (desatualizado)"
    ]
   },
   {
