--- a/Códigos/2_tratamento_outliers.ipynb
+++ b/Códigos/2_tratamento_outliers.ipynb
@@ -29,16 +29,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colunas_categoricas = ['V0001', 'V0015', 'V0026', 'V0031', 'B001', 'C006', 'C009', 'C011', 'C012','D00901', 'D014', 'D015', 'E006011', 'E008', 'E027', \n",
+    "colunas_categoricas = ['V0001', 'V0015', 'V0026', 'V0031', 'B001', 'C006', 'C009', 'C011', 'C012','D00901', 'D014', 'D015', 'E027', \n",
     "                        'F001011', 'F007011', 'F008011', 'VDF001', 'F016', 'G059', 'G060', 'G062', 'G032', \n",
-    "                        'I00102', 'I006', 'I004', 'I00401', 'I00402', 'I00403','I012', 'J001', 'J00101', 'J002', 'J00402', 'J00404', 'J007', 'J00801', 'J01101', 'J060',\n",
+    "                        'I00102', 'I006', 'I004', 'I00401', 'I00402', 'I00403','I012', 'J001', 'J00101', 'J01101', 'J060',\n",
     "                        'M001', 'M00203', 'M00302', 'M011011', 'M011021', 'M011051', 'M011071', 'N004', 'N005', 'N008', 'N010', 'N011', 'N012', 'N016', 'P02601', 'P027',\n",
     "                        'P04501', 'P04502', 'P050', 'P051', 'P052', 'P05401', 'P05404', 'P05407', 'P05410', 'P05413', 'P05416', 'P05419', 'P06701', 'P068', \n",
     "                        'Q00201', 'Q03001', 'Q060', 'Q06306', 'Q06601', 'Q068', 'Q11006', 'Q128', 'R034', 'T001', 'H003', 'H004', 'H010']\n",
     "\n",
     "\n",
     "colunas_numericas = ['C008', 'E01602', 'E017', 'E01802', 'E019', 'F001021', 'F007021', 'F008021', 'VDF00102', 'P00104', 'P00404', 'P00901', \n",
-    "                    'P01101', 'P02001', 'P018', 'P02002', 'P02501', 'P02602', 'P02801', 'P029', 'P035', 'P03701', 'P03702', 'P053']"
+    "                    'P01101', 'P02001', 'P018', 'P02002', 'P02501', 'P02602', 'P02801', 'P029', 'P035', 'P03701', 'P03702', 'P053']\n"
    ]
   },
   {
