--- a/Códigos/tableone.ipynb
+++ b/Códigos/tableone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "b3a3fcdb",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "85dd2f8c",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "aa352eb4",
    "metadata": {},
    "outputs": [],
@@ -37,25 +37,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "e1f6aa28",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"\\nColunas pra adicionar: \\n\\n'D00201', 'D00301', 'D008',\\n'E001', 'E002', 'E003', 'E004', 'E005',\\n'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01801',\\n'I00103', 'I001031'\\n'N00101',\\n'P00103', 'P00403', \\n'P034',\\n'P05901', 'P05902', 'P05903', 'P05904',\\n'Q00101', 'Q02901', 'Q05901'\\n'Q06307', 'Q06308', 'Q06309', 'Q06310', 'Q06311',\\n'H001', 'H002',\\n\""
+       "\"\\nColunas pra adicionar: \\n\\n'D00201', 'D00301', 'D008',\\n'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01801',\\n'I00103', 'I001031'\\n'N00101',\\n'P00103', 'P00403', \\n'P034',\\n'P05901', 'P05902', 'P05903', 'P05904',\\n'Q00101', 'Q02901', 'Q05901'\\n'Q06307', 'Q06308', 'Q06309', 'Q06310', 'Q06311',\\n'H001', 'H002',\\n\""
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "categorical = ['V0001', 'V0026', 'V0031', 'B001', 'C006', 'C009', 'C011', 'D00901', 'D014', 'E006011', 'E008', \n",
+    "categorical = ['V0001', 'V0026', 'V0031', 'B001', 'C006', 'C009', 'C011', 'D00901', 'D014', \n",
     "                'F001011', 'F007011', 'F008011', 'VDF001', 'G059', 'G060', 'G062', \n",
-    "                'I00102', 'I006', 'I004', 'I00401', 'I00402', 'I00403', 'J001', 'J00101', 'J002', 'J00402', 'J00404', 'J007', 'J00801', 'J01101', \n",
+    "                'I00102', 'I006', 'I004', 'I00401', 'I00402', 'I00403', 'J001', 'J00101', 'J01101', \n",
     "                'M00203', 'M011011', 'M011021', 'M011051', 'M011071', 'N004', 'N005', 'N008', 'N010', 'N011', 'N012', 'N016', 'P02601', 'P027',\n",
     "                'P04501', 'P04502', 'P034', 'P050', 'P051', 'P052', 'P05401', 'P05404', 'P05407', 'P05410', 'P05413', 'P05416', 'P05419', 'P06701', 'P068', \n",
     "                'Q00201', 'Q03001', 'Q060', 'Q06306', 'Q068', 'Q11006', 'Q128', 'R034', 'T001', 'H003', 'H004', 'H010']\n",
@@ -63,11 +63,11 @@
     "continuous = ['C008', 'E01602', 'E017', 'E01802', 'E019', 'F001021', 'F007021', 'F008021', 'VDF00102', 'P00104', 'P00404', 'P00901', \n",
     "              'P01101', 'P02001', 'P018', 'P02002', 'P02501', 'P02602', 'P02801', 'P029', 'P035', 'P03701', 'P03702', 'P053']\n",
     "\n",
+    "\n",
     "'''\n",
     "Colunas pra adicionar: \n",
     "\n",
     "'D00201', 'D00301', 'D008',\n",
-    "'E001', 'E002', 'E003', 'E004', 'E005',\n",
     "'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01801',\n",
     "'I00103', 'I001031'\n",
     "'N00101',\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "b715d4e8",
    "metadata": {},
    "outputs": [
@@ -98,10 +98,6 @@
       "  df.loc[:, column] = df[column].fillna(null_value)\n",
       "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['None' 'None' 'None' ... 'None' 'None' 'None']' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df.loc[:, column] = df[column].fillna(null_value)\n",
-      "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['None' 'None' 'None' ... 'None' 'None' 'None']' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  df.loc[:, column] = df[column].fillna(null_value)\n",
-      "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['None' 'None' 'None' ... 'None' 'None' 'None']' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  df.loc[:, column] = df[column].fillna(null_value)\n",
       "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['None' 3.0 3.0 ... 'None' 'None' 4.0]' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df.loc[:, column] = df[column].fillna(null_value)\n",
       "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['None' 'None' 1.0 ... 'None' 'None' 2.0]' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
@@ -111,12 +107,6 @@
       "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['None' 'None' 1.0 ... 'None' 'None' 1.0]' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df.loc[:, column] = df[column].fillna(null_value)\n",
       "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['None' 'None' 1.0 ... 'None' 'None' 1.0]' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  df.loc[:, column] = df[column].fillna(null_value)\n",
-      "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['None' 'None' 'None' ... 'None' 'None' 'None']' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  df.loc[:, column] = df[column].fillna(null_value)\n",
-      "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['None' 'None' 'None' ... 'None' 'None' 'None']' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  df.loc[:, column] = df[column].fillna(null_value)\n",
-      "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[1.0 2.0 2.0 ... 1.0 'None' 1.0]' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df.loc[:, column] = df[column].fillna(null_value)\n",
       "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[1.0 1.0 1.0 ... 1.0 1.0 1.0]' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df.loc[:, column] = df[column].fillna(null_value)\n",
@@ -178,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "f33b615a",
    "metadata": {},
    "outputs": [
@@ -243,17 +233,6 @@
       "| D014, n (%)         | 1.0  |           | 8691 (42.337)       |\n",
       "|                     | 2.0  |           | 8658 (42.177)       |\n",
       "|                     | None |           | 3179 (15.486)       |\n",
-      "| E006011, n (%)      | 1.0  |           | 129 (0.628)         |\n",
-      "|                     | 2.0  |           | 5 (0.024)           |\n",
-      "|                     | 3.0  |           | 108 (0.526)         |\n",
-      "|                     | 4.0  |           | 12 (0.058)          |\n",
-      "|                     | 5.0  |           | 44 (0.214)          |\n",
-      "|                     | 6.0  |           | 10 (0.049)          |\n",
-      "|                     | 7.0  |           | 17 (0.083)          |\n",
-      "|                     | None |           | 20203 (98.417)      |\n",
-      "| E008, n (%)         | 1.0  |           | 45 (0.219)          |\n",
-      "|                     | 2.0  |           | 63 (0.307)          |\n",
-      "|                     | None |           | 20420 (99.474)      |\n",
       "| E01602, mean (SD)   |      | 8803      | 2111.872 (3646.778) |\n",
       "| E017, mean (SD)     |      | 8593      | 36.427 (13.816)     |\n",
       "| E01802, mean (SD)   |      | 19821     | 1638.209 (2421.549) |\n",
@@ -309,32 +288,6 @@
       "|                     | 3.0  |           | 5518 (26.880)       |\n",
       "|                     | 4.0  |           | 1099 (5.354)        |\n",
       "|                     | 5.0  |           | 198 (0.965)         |\n",
-      "| J002, n (%)         | 1.0  |           | 2408 (11.730)       |\n",
-      "|                     | 2.0  |           | 18120 (88.270)      |\n",
-      "| J00402, n (%)       | 1.0  |           | 932 (4.540)         |\n",
-      "|                     | 10.0 |           | 44 (0.214)          |\n",
-      "|                     | 11.0 |           | 23 (0.112)          |\n",
-      "|                     | 12.0 |           | 133 (0.648)         |\n",
-      "|                     | 13.0 |           | 134 (0.653)         |\n",
-      "|                     | 14.0 |           | 189 (0.921)         |\n",
-      "|                     | 2.0  |           | 165 (0.804)         |\n",
-      "|                     | 3.0  |           | 29 (0.141)          |\n",
-      "|                     | 4.0  |           | 29 (0.141)          |\n",
-      "|                     | 5.0  |           | 254 (1.237)         |\n",
-      "|                     | 6.0  |           | 157 (0.765)         |\n",
-      "|                     | 7.0  |           | 58 (0.283)          |\n",
-      "|                     | 8.0  |           | 205 (0.999)         |\n",
-      "|                     | 9.0  |           | 56 (0.273)          |\n",
-      "|                     | None |           | 18120 (88.270)      |\n",
-      "| J00404, n (%)       | 1.0  |           | 452 (2.202)         |\n",
-      "|                     | 2.0  |           | 1743 (8.491)        |\n",
-      "|                     | 3.0  |           | 213 (1.038)         |\n",
-      "|                     | None |           | 18120 (88.270)      |\n",
-      "| J007, n (%)         | 1.0  |           | 12809 (62.398)      |\n",
-      "|                     | 2.0  |           | 7719 (37.602)       |\n",
-      "| J00801, n (%)       | 1.0  |           | 7230 (35.220)       |\n",
-      "|                     | 2.0  |           | 5579 (27.178)       |\n",
-      "|                     | None |           | 7719 (37.602)       |\n",
       "| J01101, n (%)       | 1.0  |           | 16319 (79.496)      |\n",
       "|                     | 2.0  |           | 1955 (9.524)        |\n",
       "|                     | 3.0  |           | 666 (3.244)         |\n",
@@ -537,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "3145d4e2",
    "metadata": {},
    "outputs": [
